--- a/mechine-learning/AndrewNg/01.md
+++ b/mechine-learning/AndrewNg/01.md
@@ -22,4 +22,26 @@ y = np.matrix(y.values)
 theta = np.matrix(np.array([0,0]))
 #计算下代价函数
 computeCost(X, y, theta)
+#批量梯度下降
+temp = np.matrix(np.zeros(theta.shape))
+parameters = int(theta.ravel().shape[1])
+cost = np.zeros(iters)
+
+delta = (X * theta.T) - y
+term = np.multiply(delta, X[:,0])
+temp[0,0] = theta[0,0] - ((alpha / len(X)) * np.sum(term))
+term = np.multiply(delta, X[:,1])
+temp[0,1] = theta[0,1] - ((alpha / len(X)) * np.sum(term))
+theta = temp
+print(theta,computeCost(X, y, theta))
+
+delta = (X * theta.T) - y
+term = np.multiply(delta, X[:,0])
+temp[0,0] = theta[0,0] - ((alpha / len(X)) * np.sum(term))
+term = np.multiply(delta, X[:,1])
+temp[0,1] = theta[0,1] - ((alpha / len(X)) * np.sum(term))
+theta = temp
+print(theta,computeCost(X, y, theta))
+...
+
 ```
